--- a/stylesheets/konjoianedu.css
+++ b/stylesheets/konjoianedu.css
@@ -403,7 +403,7 @@ panel-profile .panel-title {
 
 .panel-heading-contact {
     background: #3F51B5 !important;
-    background-image: url(/images/backgrounds/dankest.jpg) !important;
+    background-image: url(/images/assets/When_I_grow_up_I_want_to_be_COOL!_fixed.JPG) !important;
 }
 
 #part1, #part2, #middle-school {
