--- a/stylesheets/konjoianedu.css
+++ b/stylesheets/konjoianedu.css
@@ -234,7 +234,7 @@ h6 {
 }
 
 .hero {
-    background: url(../images/backgrounds/black-grain.jpg) center;
+    background: url(https://res.cloudinary.com/konjoian-education-center/image/upload/v1480693348/black-grain_b00pad.jpg) center;
     background-size: cover;
     height: 500px;
     width: 100%;
