--- a/stylesheets/konjoianedu.css
+++ b/stylesheets/konjoianedu.css
@@ -1,6 +1,6 @@
 /*  Dave Konjoian
     Konjoian Education Center
-    Andover, MA 01801
+    Andover, MA 01810
     konjoianeducationcenter@gmail.com
     www.konjoianeducationcenter.com  */
 
@@ -58,6 +58,10 @@ body {
 .breadcrumb:before {
     color: #9e9e9e !important;
 }
+
+@media screen and (max-width: 600px) {
+    .breadcrumb.nav {
+        display: none !important;
 
 @media screen and (min-width 768px) {
     .brand-logo {
