--- a/stylesheets/konjoianedu.css
+++ b/stylesheets/konjoianedu.css
@@ -62,6 +62,8 @@ body {
 @media screen and (max-width: 600px) {
     .breadcrumb.nav {
         display: none !important;
+    }
+}
 
 @media screen and (min-width 768px) {
     .brand-logo {
