--- a/stylesheets/konjoianedu.css
+++ b/stylesheets/konjoianedu.css
@@ -467,8 +467,8 @@ panel-profile .panel-title {
     background-color: #f5f5f5;
 }
 
-.side-nav li {
-    font-weight: 300;
+.side-nav li a {
+    font-weight: 400 !important;
 }
 
 #staggered-test {
