Changed dropdown links to font-weight 400

--- a/stylesheets/konjoianedu.css
+++ b/stylesheets/konjoianedu.css
@@ -137,6 +137,7 @@ body {
 
 .dropdown-content a {
     color: #000 !important;
+    font-weight: 400 !important;
 }
 
 ul.dropdown-content-home-page {
