Hide Breadcrumbs on Mobile

--- a/stylesheets/konjoianedu.css
+++ b/stylesheets/konjoianedu.css
@@ -60,7 +60,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-    .breadcrumb.nav {
+    .breadcrumb-nav {
         display: none !important;
     }
 }
