--- a/stylesheets/konjoianedu.css
+++ b/stylesheets/konjoianedu.css
@@ -258,7 +258,7 @@ h6 {
 }
 
 .hero {
-    background: url(https://res.cloudinary.com/konjoian-education-center/image/upload/v1480693348/black-grain_b00pad.jpg) center;
+    background: url(../images/backgrounds/blue-fine-grain-background-1449181248bk2.jpg) center;
     background-size: cover;
     height: 500px;
     width: 100%;
